# passman2

./: .gitignore  .pdm.toml  app.py  data.py  pyproject.toml
controller/: tui_controller.py
model/: data.py
tests/: test_data.py
view/: tui.py
