[tool.pdm]
[tool.pdm.dev-dependencies]
tools = [
    "black>=23.1.0",
    "pytest>=7.2.1",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "raylemon", email = "raylemon0424@gmail.com"},
]
dependencies = [
    "colorama>=0.4.6",
]
requires-python = ">=3.11"
license = {text = "MIT"}
